# coding-agent-codex-clone

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml
docs/functional/requirements/: ORIGINAL_CODEX_TOOLS_ANALYSIS.md  REQUIREMENTS_v00.md  REQUIREMENTS_v00_MVP_001.md  REQUIREMENTS_v00_MVP_002.md  REQUIREMENTS_v00_MVP_003.md
examples/: demo_prompt_workflow.yaml  demo_workflow.yaml  flow_feature_workflow.yaml  ttd_workflow.yaml
examples/tmp/ttd_demo/: calculator.py  test_calculator.py
scripts/: check_coverage.py
src/codax/: cli.py  config.py  logging.py  safety.py
src/codax/agent/: runner.py
src/codax/db/: session.py
src/codax/tools/: __init__.py  advanced.py  filesystem.py  git_tools.py  http_tool.py  llm_node.py  search_tool.py  shell.py  text_tools.py  workflow_tools.py
src/codax/utils/: __init__.py
src/codax/workflows/: __init__.py  compiler.py
src/codex/: cli.py  config.py  logging.py
src/codex/agent/: runner.py
src/codex/db/: session.py
src/codex/tools/: __init__.py  base.py  filesystem.py  git_tools.py  http_tool.py  search_tool.py  shell.py  text_tools.py  workflow_tools.py
src/codex/workflows/: compiler.py
tests/: test_agent_runner.py  test_cli_commands.py  test_config.py  test_db_session.py  test_llm_node.py  test_logging.py  test_original_tools.py  test_smoke.py  test_tools.py  test_tools_parity.py  test_workflows.py
tmp/flow_feature/: feature_impl.py  refactors.md  subtasks.md  test_feature_flow.py
