[tool.poetry]
name = "codex-clone"
version = "0.0.1"
description = "CLI-first Codex-like agent using LangGraph + LangChain + langchain-openai."
authors = ["Contributors"]
readme = "README.md"
license = "Proprietary"
packages = [{ include = "codex", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.14"
langchain-openai = "^0.1.22"
langgraph = "^0.1.17"
typer = "^0.12.3"
click = ">=8.1,<8.2"
pydantic = "^2.8.2"
pydantic-settings = "^2.5.2"
sqlmodel = "^0.0.20"
sqlalchemy = "^2.0.32"
httpx = "^0.27.0"
rich = "^13.7.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
ruff = "^0.6.8"
mypy = "^1.11.2"

[tool.poetry.scripts]
codex = "codex.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--cov=codex --cov-report=term --cov-report=json -q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
packages = ["codex"]
strict = true
exclude = ["tests"]
ignore_missing_imports = true
install_types = true
non_interactive = true
mypy_path = ["src"]
